<resources>
    <string name="app_name">CS3270A9 RJensen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_id">ID:</string>
    <string name="lbl_name">Name (Required)</string>
    <string name="lbl_code">Course Code</string>
    <string name="lbl_start_at">Start At</string>
    <string name="lbl_end_at">End At</string>
    <string name="lbl_save">Save</string>
    <string name="title_activity_main">CS3270A9 RJensen</string>
    <string name="action_settings">Settings</string>
    <string name="hint_crn_number">CRN Number</string>
    <string name="txt_name">Name</string>
    <string name="txt_course_code">Course Code</string>
    <string name="txt_start_at">Start At:</string>
    <string name="txt_end_at">End At:</string>
    <string name="title_new_course">New Course</string>
    <string name="interface_error_msg">Must Implement CourseRecyclerInterface</string>
    <string name="interface_error_msga">An error message</string>
    <string name="title_view_course">View Course</string>
    <string name="title_sure">Are you sure?</string>
    <string name="lbl_permanet_del">This will permanently delete the course!</string>
    <string name="lbl_delete">Delete</string>
</resources>
