<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseEditFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lbl_id"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_action_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_id"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lbl_name"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_action_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_name"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lbl_code"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_action_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_id"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>